fix: main menu alignment for ultrawide (#167)

--- a/styles/pages/main-menu/main-menu.scss
+++ b/styles/pages/main-menu/main-menu.scss
@@ -138,7 +138,7 @@ $pane-move-time: 0.1s;
 		height: 100%;
 		max-width: 1920px;
 		max-height: 1080px;
-		align: center center;
+		align: left center;
 
 		&__t-prop {
 			transition:
